fix(app-layout): overflow main container

--- a/packages/core/app-layout/src/styles/_base.scss
+++ b/packages/core/app-layout/src/styles/_base.scss
@@ -20,9 +20,9 @@ html.kong-ui-app-layout-html {
 html.kong-ui-app-layout-html,
 body.kong-ui-app-layout-body {
   margin: 0;
-  // height: 100%; // Reenable these rules to move the scrollbar under the AppNavbar
-  // height: 100vh; // Reenable these rules to move the scrollbar under the AppNavbar
-  // overflow: hidden; // Reenable these rules to move the scrollbar under the AppNavbar
+  height: 100%; // Reenable these rules to move the scrollbar under the AppNavbar
+  height: 100vh; // Reenable these rules to move the scrollbar under the AppNavbar
+  overflow: hidden; // Reenable these rules to move the scrollbar under the AppNavbar
   overscroll-behavior-y: none; // Disable elastic overflow scrolling in Chrome and Safari
   padding: 0;
   width: 100%;
